Test challenge to create URL shortener - response data and test improved