@@ -1,6 +1,6 @@
 package io.liliac.shortener.validation;
 
-import io.liliac.shortener.dto.ShortenUrlRequest;
+import io.liliac.shortener.dto.GenerateAliasRequest;
 import io.liliac.shortener.validation.rules.ValidationRule;
 import org.junit.jupiter.api.Test;
 
@@ -11,14 +11,14 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 
 class ValidationServiceTest {
 
-    private ValidationRule ruleWithErrors = input -> List.of(new ValidationError(ValidationErrorType.INVALID_URL_FORMAT, "ruleWithErrors"));
-    private ValidationRule ruleWithNoErrors = input -> Collections.emptyList();
-    private ValidationRule anotherRuleWithError = input -> List.of(new ValidationError(ValidationErrorType.INVALID_URL_FORMAT, "anotherRuleWithError"));
-    private ValidationService service = new ValidationService(List.of(ruleWithErrors, ruleWithNoErrors, anotherRuleWithError));
+    private final ValidationRule ruleWithErrors = input -> List.of(new ValidationError(ValidationErrorType.INVALID_URL_FORMAT, "ruleWithErrors"));
+    private final ValidationRule ruleWithNoErrors = input -> Collections.emptyList();
+    private final ValidationRule anotherRuleWithError = input -> List.of(new ValidationError(ValidationErrorType.INVALID_URL_FORMAT, "anotherRuleWithError"));
+    private final ValidationService service = new ValidationService(List.of(ruleWithErrors, ruleWithNoErrors, anotherRuleWithError));
 
     @Test
     public void validate_shouldReturnListWithAllErrorsGeneratedByAppliedRules() {
-        var errors = service.validate(new ShortenUrlRequest("longUrl"));
+        var errors = service.validate(new GenerateAliasRequest("longUrl"));
 
         assertFalse(errors.isEmpty());
         assertEquals(2, errors.size());
